# qCmp

./: .gitignore  CMakeLists.txt  LICENSE  Main.qml  README.md  Style.qml  backend.cpp  backend.h  main.cpp  utils.cpp  utils.h
image/: CMakeLists.txt  image.cpp  image.h
